--- a/contoh_testing/pubspec.yaml
+++ b/contoh_testing/pubspec.yaml
@@ -6,6 +6,7 @@ environment:
   sdk: '>=2.18.2 <3.0.0'
 
 dependencies:
+  dio: ^4.0.6
   freezed_annotation: ^2.2.0
 #   path: ^1.8.0
 dev_dependencies:
@@ -13,4 +14,5 @@ dev_dependencies:
   freezed: ^2.2.0
   json_serializable: ^6.5.2
   lints: ^2.0.0
+  mockito: ^5.3.2
   test: ^1.16.0
